templates/gke-topo-routing/config-connector-workload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topo-app
  labels:
    app: topo-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: topo-app
  template:
    metadata:
      labels:
        app: topo-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: topo-app
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
